# openclaw-approval-guard

./: Cargo.toml  README.md  README_zh-CN.md
config/: mcporter.json
ops/: config-backup.sh  config-restore.sh  search_crawler.mjs
ops/approval/: .gitignore  README.md  config.json  request-approval.sh  request-soft-alert.sh  run-with-approval.sh
scripts/: one-click-install.ps1  one-click-install.sh
skills/openclaw-approval-guard/: .gitignore  SKILL.md
skills/openclaw-approval-guard/references/: config.example.json
skills/openclaw-approval-guard/scripts/: install.sh  request-approval.sh  request-soft-alert.sh  run-with-approval.sh  uninstall.sh
src/: main.rs
